--- a/front-end/src/app/pages/to-do-page/to-do-table/to-do-table.component.scss
+++ b/front-end/src/app/pages/to-do-page/to-do-table/to-do-table.component.scss
@@ -56,8 +56,7 @@
 
   // description block
   .todo-table td:nth-child(2) span {
-    // should be any fix width on start
-    width: 400px;
+    width: 100%;
   }
 
   // actions block
